--- a/RogueAttemptMaybe/RogueAttemptMaybe.csproj
+++ b/RogueAttemptMaybe/RogueAttemptMaybe.csproj
@@ -8,6 +8,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Update="Armors.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="Weapons.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
